--- a/src/components/navigation/NavTop.css
+++ b/src/components/navigation/NavTop.css
@@ -1,3 +1,7 @@
 .bg-image-url {
     background-image: url('./blackboard-business-chalkboard-355988.jpg');
 }
+
+.header-quotes {
+    font-family: 'Spirax', cursive;
+}
