--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto Slab', serif;
-  background-color: rgb(232, 232, 232); 
+  background-color: lightgray; 
 }
